# cachehub

./: CLAUDE.md  Cargo.toml  README.md
src/: cache_cli.rs  config.rs  daemon.rs  daemon_cli.rs  errors_cli.rs  exec.rs  invalidate.rs  ipc.rs  key.rs  limiter.rs  main.rs  prefetch.rs  router.rs  store.rs  warmer.rs
